--- a/spm.service
+++ b/spm.service
@@ -1,11 +1,12 @@
 [Unit]
 Description=SPM serial reader and parser
-After=set-hostname.service
+Requires=network-online.target
+After=network-online.target edison-machine-id.service
 
 [Service]
-Type=oneshot
 ExecStart=/bin/spm
-RemainAfterExit=yes
+Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=basic.target
