add SPM or PMC detection service

--- a/pmc.service
+++ b/pmc.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=PMC serial reader and parser
 Requires=network-online.target
-After=network-online.target edison-machine-id.service
+After=network-online.target edison-machine-id.service wams-config.service
 
 [Service]
 Type=oneshot
