--- a/wams-config.service
+++ b/wams-config.service
@@ -2,10 +2,9 @@
 Description=Configure WAMS to SPM or PMC
 
 [Service]
-Type=oneshot
+Type=forking
 ExecStart=/bin/wams-config
 ExecStartPost=/bin/systemctl disable wams-config
-StandardOutput=journal+console
 
 [Install]
 WantedBy=basic.target
